--- a/style.css
+++ b/style.css
@@ -5,12 +5,7 @@ body {
   color: #333;
 }
 
-.container {
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
+/* Tidak perlu override .container karena Bootstrap sudah menangani */
 header {
   background-color: #1e90ff;
   color: white;
@@ -29,7 +24,7 @@ header p {
 }
 
 section {
-  padding: 40px 20px;
+  padding: 60px 20px;
   border-bottom: 1px solid #ddd;
   background-color: #fff;
 }
@@ -37,7 +32,7 @@ section {
 h2 {
   font-size: 2em;
   color: #1e90ff;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .project {
