--- a/style.css
+++ b/style.css
@@ -174,14 +174,24 @@ a:hover {
   text-decoration: underline;
 }
 
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
+/* Carousel Controls - Ikon Kiri */
+.carousel-control-prev-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M4.854 1.146a.5.5 0 0 1 0 .708L2.707 4l2.147 2.146a.5.5 0 0 1-.708.708l-2.5-2.5a.5.5 0 0 1 0-.708l2.5-2.5a.5.5 0 0 1 .708 0z'/%3E%3C/svg%3E");
+  background-size: 100% 100%;
+  width: 2rem;
+  height: 2rem;
+  opacity: 1;
 }
 
+/* Carousel Controls - Ikon Kanan */
 .carousel-control-next-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M3.146 1.146a.5.5 0 0 1 .708 0l2.5 2.5a.5.5 0 0 1 0 .708l-2.5 2.5a.5.5 0 1 1-.708-.708L5.293 4 3.146 1.854a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+  background-size: 100% 100%;
+  width: 2rem;
+  height: 2rem;
+  opacity: 1;
 }
+
 
 /* Social Buttons */
 .btn-social {
